put snake controls in a function